--- a/index.ipynb
+++ b/index.ipynb
@@ -558,14 +558,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "a12812fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n"
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "df[\"subcategory\"] = label_encoder.fit_transform(df[\"subcategory\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "fdde831f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b12cbe3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
