--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 211,
    "id": "919f6139",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 212,
    "id": "ec8a9ce4",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 213,
    "id": "b647328e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "2  https://www.tokopedia.com/wjozfashion/piyama-b...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 214,
    "id": "f965278c",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 215,
    "id": "75d39be9",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "max      6401.000000     5.000000  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 216,
    "id": "d88899f9",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 217,
    "id": "c3078031",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 218,
    "id": "4eff0bfa",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 219,
    "id": "b3eaba53",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 220,
    "id": "94c13eec",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 221,
    "id": "aaaa406b",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 222,
    "id": "0825882c",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 223,
    "id": "920a6bbe",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 224,
    "id": "e4486a53",
    "metadata": {},
    "outputs": [],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 225,
    "id": "a12812fb",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 226,
    "id": "fdde831f",
    "metadata": {},
    "outputs": [],
@@ -582,8 +582,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "id": "6b12cbe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.apply(lambda x: np.log1p(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "7c0c572b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gold_merchant</th>\n",
+       "      <th>jumlah_review</th>\n",
+       "      <th>jumlah_view</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity_sold</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4104.000000</td>\n",
+       "      <td>4104.000000</td>\n",
+       "      <td>4104.000000</td>\n",
+       "      <td>4104.000000</td>\n",
+       "      <td>4104.000000</td>\n",
+       "      <td>4104.000000</td>\n",
+       "      <td>4104.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.334582</td>\n",
+       "      <td>2.307719</td>\n",
+       "      <td>0.363594</td>\n",
+       "      <td>11.286535</td>\n",
+       "      <td>2.399602</td>\n",
+       "      <td>1.770929</td>\n",
+       "      <td>2.874400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.346408</td>\n",
+       "      <td>1.154515</td>\n",
+       "      <td>1.498057</td>\n",
+       "      <td>0.635667</td>\n",
+       "      <td>1.836031</td>\n",
+       "      <td>0.069227</td>\n",
+       "      <td>0.802491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.922792</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.386294</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.913287</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>1.791759</td>\n",
+       "      <td>1.791759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.079442</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.264477</td>\n",
+       "      <td>2.397895</td>\n",
+       "      <td>1.791759</td>\n",
+       "      <td>3.258097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>3.091042</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.695255</td>\n",
+       "      <td>3.713572</td>\n",
+       "      <td>1.791759</td>\n",
+       "      <td>3.526361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>7.396335</td>\n",
+       "      <td>10.691968</td>\n",
+       "      <td>14.603968</td>\n",
+       "      <td>8.685078</td>\n",
+       "      <td>1.791759</td>\n",
+       "      <td>3.850148</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       gold_merchant  jumlah_review  jumlah_view        price  quantity_sold  \\\n",
+       "count    4104.000000    4104.000000  4104.000000  4104.000000    4104.000000   \n",
+       "mean        0.334582       2.307719     0.363594    11.286535       2.399602   \n",
+       "std         0.346408       1.154515     1.498057     0.635667       1.836031   \n",
+       "min         0.000000       0.000000     0.000000     8.922792       0.000000   \n",
+       "25%         0.000000       1.386294     0.000000    10.913287       0.693147   \n",
+       "50%         0.000000       2.079442     0.000000    11.264477       2.397895   \n",
+       "75%         0.693147       3.091042     0.000000    11.695255       3.713572   \n",
+       "max         0.693147       7.396335    10.691968    14.603968       8.685078   \n",
+       "\n",
+       "            rating  subcategory  \n",
+       "count  4104.000000  4104.000000  \n",
+       "mean      1.770929     2.874400  \n",
+       "std       0.069227     0.802491  \n",
+       "min       0.000000     0.000000  \n",
+       "25%       1.791759     1.791759  \n",
+       "50%       1.791759     3.258097  \n",
+       "75%       1.791759     3.526361  \n",
+       "max       1.791759     3.850148  "
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "2e6c47e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[[\"gold_merchant\", \"jumlah_review\", \"jumlah_view\", \"quantity_sold\", \"rating\", \"gold_merchant\"]]\n",
+    "y = df[\"price\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "11b98749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_inverse = np.exp(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "7ae50196",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.11944842386699797\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "rfg = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "cv_score = cross_val_score(rfg, X, y, cv=5, scoring=\"r2\")\n",
+    "\n",
+    "print(cv_score.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "f0ad2ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.10121281 -0.00212895 -0.44131499 -0.05446376  0.00187838]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cv_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "01081e45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "608d7e6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "39c2fa15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "ss = StandardScaler()\n",
+    "\n",
+    "X_train = ss.fit_transform(X_train)\n",
+    "X_test = ss.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ac2f5b3",
    "metadata": {},
    "outputs": [],
    "source": []
